--- a/y.css
+++ b/y.css
@@ -1,4 +1,3 @@
-
 /* Reset básico de márgenes y padding */
 * {
     margin: 0;
@@ -52,9 +51,29 @@ p {
     transform: scale(0.9); /* Reduce el tamaño del botón al 90% al hacer clic */
 }
 
+/* Animación de rotación para el texto */
+@keyframes girarTexto {
+    0% {
+        transform: rotate(0deg); /* Comienza en su posición original */
+    }
+    50% {
+        transform: rotate(360deg); /* Gira 360 grados en la mitad de la animación */
+    }
+    100% {
+        transform: rotate(0deg); /* Vuelve a su posición original */
+    }
+}
+
+/* Aplica la animación al texto dentro de la nueva ventana */
+.girar-texto {
+    display: inline-block;
+    animation: girarTexto 3s ease-in-out; /* Aplica la animación girarTexto durante 3 segundos */
+}
+
 footer {
     margin-top: 30px;
     font-size: 0.9em;
     color: #777;
 }
+
 
